--- a/about_me.html
+++ b/about_me.html
@@ -69,7 +69,7 @@
                 <a href="./contact-me.html" style="color: #000000" class="gac1">Contact</a>
             </ul>
             <ul>
-                <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
+                <a href="./à_propos.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
                 <a href="./indexGB.html"><img class="flag_gb" src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="Icone pour passer dans la langue anglaise"></a>
             </ul>
         </nav>         
@@ -112,7 +112,7 @@
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">the MMI department in Montbéliard.</a></p>
             <p>University Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
-            <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
+            <img class="logo_mmi" src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
     </footer>
 </body>
 </html>
