--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
-            <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
+            <img class="logo_mmi" src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
     </footer>
 </body>
 </html>
