--- a/indexGB.html
+++ b/indexGB.html
@@ -206,7 +206,7 @@
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">the MMI department in Montbéliard.</a></p>
             <p>University Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
-            <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
+            <img class="logo_mmi" src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
     </footer>
 </body>
 </html>
