--- a/à_propos.html
+++ b/à_propos.html
@@ -70,19 +70,19 @@
             </ul>
             <ul>
                 <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
-                <a href="./indexGB.html"><img class="flag_gb" src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="Icone pour passer dans la langue anglaise"></a>
+                <a href="./about_me.html"><img class="flag_gb" src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="Icone pour passer dans la langue anglaise"></a>
             </ul>
         </nav>         
     </header>  
     <h1> À propos</h1>
     <H4>
         Le thème que j'ai choisi est fondé sur mon article sur One Piece car tous mes 
-        autres articles coïncident avec celui-ci. 
-        Dans One Piece, il y a une dénonciation de la pollution ce que j'ai faits avec mon 
-        article sur mon livre de la BU. 
-        Avec le lieu, les espoirs et les regrets, rejoignent One Piece, car il y a du racisme, 
-        de la malnutrition et quelques personnes qui aident les plus précaires. 
-        Et enfin, ma musique coïncide avec mon thème général du monde actuel avec 
+        autres articles coïncident avec celui-ci. </H4>
+        <H4>Dans One Piece, il y a une dénonciation de la pollution ce que j'ai faits avec mon 
+        article sur mon livre de la BU. </H4>
+        <H4>Avec le lieu, les espoirs et les regrets, rejoignent One Piece, car il y a du racisme, 
+        de la malnutrition et quelques personnes qui aident les plus précaires. </H4>
+        <H4>Et enfin, ma musique coïncide avec mon thème général du monde actuel avec 
         l'argent au centre des intérêts, de la consommation de masse, les aléas du renouveau, 
         les personnes accros avec leurs téléphones, ...
     </H4>
@@ -117,7 +117,7 @@
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
-            <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
+            <img class="logo_mmi" src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
     </footer>
 </body>
 </html>
