same page of the french page

--- a/about_me.html
+++ b/about_me.html
@@ -76,11 +76,11 @@
     </header>
     <h1>About me</h1>
     <H4>
-        The theme I chose is based on my article on One Piece because all my other articles coincide with it. 
-        In One Piece, there is a denunciation of pollution which I did with my article on my BU book. 
-        With the place, the hopes and regrets, join One Piece, because there is racism, malnutrition and some people who help the most precarious. 
-        And finally, my music coincides with my general theme of the current world with money at the centre of interests, 
-        mass consumption, the hazards of renewal, people addicted to their phones, ...
+        The theme I chose is based on my article on One Piece because all my other articles coincide with it. </H4>
+        <H4>In One Piece, there is a denunciation of pollution which I did with my article on my BU book. </H4>
+        <H4>With the place, the hopes and regrets, join One Piece, because there is racism, malnutrition and some people who help the most precarious. </H4>
+        <H4>And finally, my music coincides with my general theme of the current world with money at the centre of interests, 
+        mass consumption, the hazards of renewal, people addicted to their phones, ...</H4>
     </H4>
     <br>
     <footer>
