rectification of the english

--- a/series.html
+++ b/series.html
@@ -142,7 +142,7 @@
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="#">
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="#">
     <p>Carousel of the 4 best-selling Oda films.</p>
-    <h3>Regarder le premier épisode de One Piece</h3>
+    <h3>Watch the first episode of One Piece</h3>
     <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#"></a>
 
     <footer>
