h3 and h4 footer changes

--- a/hopes.html
+++ b/hopes.html
@@ -127,7 +127,7 @@
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
-            <h3 class="created_by_footer">WebSite created by Sofiane Mouadeb in class from MMI Montbéliard</h3>
+            <h3 class="h3footer" class="created_by_footer">WebSite created by Sofiane Mouadeb in class from MMI Montbéliard</h3>
         </div>
         <h2>Menu</h2>
          <p>Legal notice</p>
@@ -135,7 +135,7 @@
         <p>Contact</p> 
         <p>4 Place Tharradin</p>
         <p>25200 Montbéliard</p>      
-        <h4>Follow l'IUT MMI</h4>
+        <h4 class="h4footer">Follow l'IUT MMI</h4>
         <div class="icon">
             <div class="icon_facebook"><a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="/public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="logo facebook"></a></div>
             <div class="icon_twitter"><a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="logo twitter"></a></div>
