fichier gb et fr donc retification index fr  gb

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li><br>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li><br>
-                <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li><br>
-                <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li><br>
-                <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li><br>
-                <li><a href="./page_regret.html" style="color: #000000">Un Regret de cette génération</a></li><br>
-                <li><a href="./autres_projets.html" style="color: #000000">Autres Projets</a></li><br>
+                <li class="header_text"><a href="./fr/page_musique.html" style="color: #000000">Une musique interessante</a></li><br>
+                <li><a href="./fr/page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li><br>
+                <li><a href="./fr/page_serie.html" style="color: #000000">La Série qui résume tout</a></li><br>
+                <li><a href="./fr/page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li><br>
+                <li><a href="./fr/page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li><br>
+                <li><a href="./fr/page_regret.html" style="color: #000000">Un Regret de cette génération</a></li><br>
+                <li><a href="./fr/autres_projets.html" style="color: #000000">Autres Projets</a></li><br>
             </ul>
             <hr width="110%">
             <ul class="ululul">
-                <a href="./glossaire.html" style="color: #000000" class="gac">Glossaire</a>
-                <a href="./à_propos.html" style="color: #000000" class="gac">À propos</a>
-                <a href="./page_contact.html" style="color: #000000" class="gac">Contact</a>
+                <a href="./fr/glossaire.html" style="color: #000000" class="gac">Glossaire</a>
+                <a href="./fr/à_propos.html" style="color: #000000" class="gac">À propos</a>
+                <a href="./fr/page_contact.html" style="color: #000000" class="gac">Contact</a>
             </ul>
             <ul>
                 <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
@@ -93,7 +93,7 @@
         <p class="text-accueil">Contenu de l'article : Avec ces paroles, l'artiste nous montre que monde est obnubilé par l'argent 
             et la consommation. On peut peut-être parler même de  consommation de masse.
         </p> 
-            <a href="./page_musique.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
+            <a href="./fr/page_musique.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
             <br>
     </div> 
     <br>      
@@ -110,7 +110,7 @@
             sur la pollution de l'air. Mais vu que le livre date de 1998, nous allons voir les tendances 
             de cette époque et les comparer avec les tendances actuelles.
         </p> 
-            <a href="./page_livre.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
+            <a href="./fr/page_livre.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
         <br>
     </div>  
     <br> 
@@ -124,7 +124,7 @@
         <p class="text-accueil">Contenu de l'article : Nous allons voir ce que Oda a insinué dans son œuvre. Il fait pas mal 
             d'allusions cachées ce qui fait son style intrigant et intéressant de l'œuvre.
         </p> 
-            <a href="./page_serie.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
+            <a href="./fr/page_serie.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
             <br>
     </div>  
     <br>      
@@ -139,7 +139,7 @@
     <p class="text-accueil">Contenu de l'article : Nous allons voir pourquoi nous avons choisi ce lieu. L'Afrique Du Sud 
         est le pays le plus inégalitaire du monde.
     </p>
-        <a href="./page_lieu.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
+        <a href="./fr/page_lieu.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
         <br>
     </div>  
     <br>  
@@ -155,7 +155,7 @@
     <p class="text-accueil"> Contenu de l'article : Nous allons énumérer pas mal de systéme pour l'aide aux personnes démunies. 
         Notamment avec les associations ou même les cagnottes.        
     </p>
-        <a href="./page_espoir.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
+        <a href="./fr/page_espoir.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
         <br>
     </div>
     <br>
@@ -171,7 +171,7 @@
     <p class="text-accueil">Contenu de l'article : Nous allons énumérer pas mal d'inégalités dans le monde. Avec le mauvais accès 
         à l'eau et à la nourriture dans le monde.
     </p>
-        <a href="./page_regret.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
+        <a href="./fr/page_regret.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
         <br>
     </div>
     <br>
