--- a/indexGB.html
+++ b/indexGB.html
@@ -54,19 +54,19 @@
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./gb/music.html" style="color: #000000">An interesting music</a></li><br>
-                <li><a href="./gb/book.html" style="color: #000000">The book for the environment</a></li><br>
-                <li><a href="./gb/series.html" style="color: #000000">The Series that sums it all up</a></li><br>
-                <li><a href="./gb/place.html" style="color: #000000">Most unequal place in the world</a></li><br>
-                <li><a href="./gb/hopes.html" style="color: #000000">A great hope for the world</a></li><br>
-                <li><a href="./gb/regrets.html" style="color: #000000">A regret of this generation</a></li><br>
-                <li><a href="./gb/other_project.html" style="color: #000000">Other project</a></li><br>
+                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li><br>
+                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li><br>
+                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li><br>
+                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li><br>
+                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li><br>
+                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li><br>
+                <li><a href="./other_project.html" style="color: #000000">Other project</a></li><br>
             </ul>
             <hr width="110%">
             <ul class="ululul">
-                <a href="./gb/glossary.html" style="color: #000000" class="gac1">Glossary</a>
-                <a href="./gb/about_me.html" style="color: #000000" class="gac1">About me</a>
-                <a href="./gb/contact-me.html" style="color: #000000" class="gac1">Contact</a>
+                <a href="./glossary.html" style="color: #000000" class="gac1">Glossary</a>
+                <a href="./about_me.html" style="color: #000000" class="gac1">About me</a>
+                <a href="./contact-me.html" style="color: #000000" class="gac1">Contact</a>
             </ul>
             <ul>
                 <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
@@ -94,7 +94,7 @@
         <p class="text-accueil"> Content of the article: With these lyrics, the artist shows us that the world is obnibulated 
             by money and consumption. Perhaps we can even talk about mass consumption. 
         </p> 
-            <a href="./gb/music.html"><button class="ensavoirplusbtn">Learn more</button></a>
+            <a href="./music.html"><button class="ensavoirplusbtn">Learn more</button></a>
             <br>
     </div> 
     <br>    
@@ -109,7 +109,7 @@
         <p class="text-accueil"> Content of the article: We will see what APPA tells us about air pollution. But as the book dates from 
             1998, we will see the trends from that time and compare them with the current trends.
         </p> 
-            <a href="./gb/book.html"><button class="ensavoirplusbtn">Learn more</button></a>
+            <a href="./book.html"><button class="ensavoirplusbtn">Learn more</button></a>
             <br>
     </div> 
     <br>   
@@ -124,7 +124,7 @@
         <p class="text-accueil">Content of the article: We'll see what Oda is up to in his work. He makes a lot of hidden allusions 
             which makes his style intriguing and interesting.
         </p> 
-            <a href="./gb/series.html"><button class="ensavoirplusbtn">Learn more</button></a>
+            <a href="./series.html"><button class="ensavoirplusbtn">Learn more</button></a>
             <br>
     </div> 
     <br>   
@@ -139,7 +139,7 @@
     <p class="text-accueil"> Content of the article: We will see why we chose this place. South Africa is the most insecure country 
         in the world.
     </p>
-        <a href="./gb/place.html"><button class="ensavoirplusbtn">Learn more</button></a>
+        <a href="./place.html"><button class="ensavoirplusbtn">Learn more</button></a>
         <br>
     </div> 
     <br>   
@@ -155,7 +155,7 @@
     <p class="text-accueil"> Content of the article: We are going to enumerate a lot of systems to help the poor. In particular with the 
         associations or even the kitty.
     </p>
-        <a href="./gb/hopes.html"></a><button class="ensavoirplusbtn">Learn more</button></a>
+        <a href="./hopes.html"></a><button class="ensavoirplusbtn">Learn more</button></a>
         <br>
     </div> 
     <br>   
@@ -171,7 +171,7 @@
     <p class="text-accueil"> Content of the article: We will list a lot of inequalities in the world. With the poor access to water and 
         food in the world.
     </p>
-        <a href="./gb/regrets.html"></a><button class="ensavoirplusbtn">Learn more</button></a>
+        <a href="./regrets.html"></a><button class="ensavoirplusbtn">Learn more</button></a>
         <br>
     </div> 
     <br>   
