other project gb and fr html correction

--- a/autres_projets.html
+++ b/autres_projets.html
@@ -76,6 +76,7 @@
     </header>
     <h1>Autres projets</h1>
     <p>Vous trouverez d'autres articles qui vous intéressent sûrement.</p>
+    <p>Ce sont les projets de mes camarades de classes.</p>
 
     <a href="https://what-have-we-become.evanmoulin.fr"><p> What have we become ? ( Créé par Evan Moulin )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/whathavewebecome.png" alt="#">
@@ -91,7 +92,8 @@
 
     <a href="https://vers-un-monde-utopique.albanluc.fr"><p> Vers un monde utopique ( Créé par Alban Luc )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="#">
-    
+
+    <p>Voici un de mes projet en groupe, c'est un micro-trorroir tourné sur Montbéliard.</p>
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
