--- a/other_project.html
+++ b/other_project.html
@@ -76,6 +76,7 @@
     </header>
     <h1>Other projects</h1>
     <p>Here are some other articles that you may find interesting.</p>
+    <p>This is the project of my classmate.</p>
         
     <a href="https://what-have-we-become.evanmoulin.fr"><p> What have we become ? ( Created by Evan Moulin )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/whathavewebecome.png" alt="#">
@@ -91,6 +92,8 @@
 
     <a href="https://vers-un-monde-utopique.albanluc.fr"><p> Vers un monde utopique ( Created by Alban Luc )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="#">
+
+    <p>Here is one of my group projects, it is a micro-troir shot in Montbéliard.</p>
 
     <footer>
         <div class="logo__texte_ms">
