--- a/other_project.html
+++ b/other_project.html
@@ -93,7 +93,8 @@
     <a href="https://vers-un-monde-utopique.albanluc.fr"><p> Vers un monde utopique ( Created by Alban Luc )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="#">
 
-    <p>Here is one of my group projects, it is a micro-troir shot in Montbéliard.</p>
+    <p>Here is one of my group projects, it is a micro-trottoir shot in Montbéliard.</p>
+    <video controls src="https://media.mouadeb.fr/SAE-104-Francais-RYO..mp4"></video>
 
     <footer>
         <div class="logo__texte_ms">
