--- a/autres_projets.html
+++ b/autres_projets.html
@@ -93,7 +93,9 @@
     <a href="https://vers-un-monde-utopique.albanluc.fr"><p> Vers un monde utopique ( Créé par Alban Luc )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="#">
 
-    <p>Voici un de mes projet en groupe, c'est un micro-trorroir tourné sur Montbéliard.</p>
+    <p>Voici un de mes projet en groupe, c'est un micro-trottoir tourné sur Montbéliard.</p>
+    <video controls src="https://media.mouadeb.fr/SAE-104-Francais-RYO..mp4"></video>
+    
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
