--- a/autres_projets.html
+++ b/autres_projets.html
@@ -94,8 +94,8 @@
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="#">
 
     <p>Voici un de mes projet en groupe, c'est un micro-trottoir tourné sur Montbéliard.</p>
-    <video controls src="https://media.mouadeb.fr/SAE-104-Francais-RYO..mp4"></video>
-    
+    <video controls src="https://media.mouadeb.fr/SAE-104-Francais-RYO..mp4" class="videoooo"></video>
+
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
