video sae 104 gb

--- a/other_project.html
+++ b/other_project.html
@@ -94,7 +94,7 @@
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="#">
 
     <p>Here is one of my group projects, it is a micro-trottoir shot in Montbéliard.</p>
-    <video controls src="https://media.mouadeb.fr/SAE-104-Francais-RYO..mp4" class="videoooo"></video>
+    <video controls src="https://media.mouadeb.fr/SAE-104-anglais-RYO..mp4" class="videoooo"></video>
 
     <footer>
         <div class="logo__texte_ms">
