--- a/page_musique.html
+++ b/page_musique.html
@@ -54,13 +54,13 @@
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li><br>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li><br>
-                <li><a href="./page_serie.html" style="color: #000000">La série qui résume tout</a></li><br>
-                <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li><br>
-                <li><a href="./page_espoir.html" style="color: #000000">Un grand espoirs de ce monde</a></li><br>
-                <li><a href="./page_regret.html" style="color: #000000">Un regret de cette génération</a></li><br>
-                <li><a href="./autres_projets.html" style="color: #000000">Autres projets</a></li><br>
+                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
+                <li><a href="./page_serie.html" style="color: #000000">La série qui résume tout</a></li>
+                <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
+                <li><a href="./page_espoir.html" style="color: #000000">Un grand espoirs de ce monde</a></li>
+                <li><a href="./page_regret.html" style="color: #000000">Un regret de cette génération</a></li>
+                <li><a href="./autres_projets.html" style="color: #000000">Autres projets</a></li>
             </ul>
             <hr width="110%">
             <ul class="ululul">
