--- a/book.html
+++ b/book.html
@@ -54,13 +54,13 @@
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li><br>
-                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li><br>
-                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li><br>
-                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li><br>
-                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li><br>
-                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li><br>
-                <li><a href="./other_project.html" style="color: #000000">Other project</a></li><br>
+                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li>
+                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li>
+                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li>
+                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li>
+                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li>
+                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li>
+                <li><a href="./other_project.html" style="color: #000000">Other project</a></li>
             </ul>
             <hr width="110%">
             <ul class="ululul">
