--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <header>
         <a href="./index.html">
-            <img class="logo_principal"src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="Logo du Site Internet">
+            <img class="logo_principal" src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="Logo du Site Internet">
         </a>
         <button class="header_menu btndumenu" @click="menuIsOpen = ! menuIsOpen">
             <img aria-controls="mainNav" src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="Icone de menu">
@@ -54,13 +54,13 @@
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li><br>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li><br>
-                <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li><br>
-                <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li><br>
-                <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li><br>
-                <li><a href="./page_regret.html" style="color: #000000">Un Regret de cette génération</a></li><br>
-                <li><a href="./autres_projets.html" style="color: #000000">Autres Projets</a></li><br>
+                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
+                <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
+                <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
+                <li><a href="./page_regret.html" style="color: #000000">Un Regret de cette génération</a></li>
+                <li><a href="./autres_projets.html" style="color: #000000">Autres Projets</a></li>
             </ul>
             <hr width="110%">
             <ul class="ululul">
